--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title></title>
+    <title>Website Title</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -18,6 +18,8 @@
     <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-144.png">
     <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144.png">
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400italic,400' rel='stylesheet' type='text/css'>
 
     <!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/bootstrap.css" rel="stylesheet">
@@ -43,7 +45,10 @@
     your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<h1>Place text here</h1>
+<div class="container">
+    <h1>Place text here</h1>
+</div>
+
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
